--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,6 +5,21 @@ body{
     font-size: 16px;
     margin: 1 0px;
 }
+#cabecera
+{
+    background: #33A;
+    color: white;
+    margin: 0;
+    padding: .5em;
+    font-weight: bold;
+    box-shadow: 0px 2   px 50px 0px rgba(0,0,0,0.75);
+}
+#cabecera #tagline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: .8em;
+}
 #container
 {
     width: 70%;
