--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,18 +1,24 @@
 body{
-    color: blue  ;
+    background: black;
+    color: #333  ;
     text-align: center;
     font-family: "Arial";
     font-size: 16px;
-    margin: 1 0px;
+    margin:  0px;
+    padding: 0;
 }
 #cabecera
 {
-    background: #33A;
+    background: #37488b;
     color: white;
     margin: 0;
     padding: .5em;
     font-weight: bold;
-    box-shadow: 0px 2   px 50px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+}
+#cabecera #logo
+{
+    width: 20px;
 }
 #cabecera #tagline
 {
@@ -30,4 +36,8 @@ body{
 }
 #container h1{
     font-size: 20px;
+}
+#post{
+    background: white;
+    padding: 1em;
 }
